[gd_scene load_steps=20 format=3 uid="uid://c1lidm474qoiv"]

[ext_resource type="Script" path="res://scripts/merchant_scene.gd" id="1_2uvlx"]
[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_5j42f"]
[ext_resource type="PackedScene" uid="uid://rhn3ly03pvy8" path="res://objects/components/music_changer.tscn" id="4_l6c8x"]
[ext_resource type="PackedScene" uid="uid://bbhf0o63v45ur" path="res://objects/interactables/merch_displayer.tscn" id="13_3dylx"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_s2fal"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_rjlh8"]
sky_material = SubResource("ProceduralSkyMaterial_s2fal")

[sub_resource type="Environment" id="Environment_a2d0w"]
background_mode = 2
background_energy_multiplier = 0.0
sky = SubResource("Sky_rjlh8")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1pltc"]
animation = &"Grip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_fbyry"]
animation = &"Grip"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_uj063"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Little_Distal_L", "Armature/Skeleton3D:Little_Intermediate_L", "Armature/Skeleton3D:Little_Metacarpal_L", "Armature/Skeleton3D:Little_Proximal_L", "Armature/Skeleton3D:Middle_Distal_L", "Armature/Skeleton3D:Middle_Intermediate_L", "Armature/Skeleton3D:Middle_Metacarpal_L", "Armature/Skeleton3D:Middle_Proximal_L", "Armature/Skeleton3D:Ring_Distal_L", "Armature/Skeleton3D:Ring_Intermediate_L", "Armature/Skeleton3D:Ring_Metacarpal_L", "Armature/Skeleton3D:Ring_Proximal_L", "Armature/Skeleton3D:Thumb_Distal_L", "Armature/Skeleton3D:Thumb_Metacarpal_L", "Armature/Skeleton3D:Thumb_Proximal_L", "Armature/Skeleton:Little_Distal_L", "Armature/Skeleton:Little_Intermediate_L", "Armature/Skeleton:Little_Proximal_L", "Armature/Skeleton:Middle_Distal_L", "Armature/Skeleton:Middle_Intermediate_L", "Armature/Skeleton:Middle_Proximal_L", "Armature/Skeleton:Ring_Distal_L", "Armature/Skeleton:Ring_Intermediate_L", "Armature/Skeleton:Ring_Proximal_L", "Armature/Skeleton:Thumb_Distal_L", "Armature/Skeleton:Thumb_Proximal_L"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_owi4v"]
animation = &"Grip 5"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_lagk5"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Index_Distal_L", "Armature/Skeleton3D:Index_Intermediate_L", "Armature/Skeleton3D:Index_Metacarpal_L", "Armature/Skeleton3D:Index_Proximal_L", "Armature/Skeleton:Index_Distal_L", "Armature/Skeleton:Index_Intermediate_L", "Armature/Skeleton:Index_Proximal_L"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_46ux0"]
graph_offset = Vector2(-536, 11)
nodes/ClosedHand1/node = SubResource("AnimationNodeAnimation_1pltc")
nodes/ClosedHand1/position = Vector2(-600, 300)
nodes/ClosedHand2/node = SubResource("AnimationNodeAnimation_fbyry")
nodes/ClosedHand2/position = Vector2(-360, 300)
nodes/Grip/node = SubResource("AnimationNodeBlend2_uj063")
nodes/Grip/position = Vector2(0, 20)
nodes/OpenHand/node = SubResource("AnimationNodeAnimation_owi4v")
nodes/OpenHand/position = Vector2(-600, 100)
nodes/Trigger/node = SubResource("AnimationNodeBlend2_lagk5")
nodes/Trigger/position = Vector2(-360, 20)
node_connections = [&"Grip", 0, &"Trigger", &"Grip", 1, &"ClosedHand2", &"Trigger", 0, &"OpenHand", &"Trigger", 1, &"ClosedHand1", &"output", 0, &"Grip"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_81uet"]
animation = &"Grip"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gqvs6"]
animation = &"Grip"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_8j1dq"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Little_Distal_R", "Armature/Skeleton3D:Little_Intermediate_R", "Armature/Skeleton3D:Little_Metacarpal_R", "Armature/Skeleton3D:Little_Proximal_R", "Armature/Skeleton3D:Middle_Distal_R", "Armature/Skeleton3D:Middle_Intermediate_R", "Armature/Skeleton3D:Middle_Metacarpal_R", "Armature/Skeleton3D:Middle_Proximal_R", "Armature/Skeleton3D:Ring_Distal_R", "Armature/Skeleton3D:Ring_Intermediate_R", "Armature/Skeleton3D:Ring_Metacarpal_R", "Armature/Skeleton3D:Ring_Proximal_R", "Armature/Skeleton3D:Thumb_Distal_R", "Armature/Skeleton3D:Thumb_Metacarpal_R", "Armature/Skeleton3D:Thumb_Proximal_R", "Armature/Skeleton:Little_Distal_R", "Armature/Skeleton:Little_Intermediate_R", "Armature/Skeleton:Little_Proximal_R", "Armature/Skeleton:Middle_Distal_R", "Armature/Skeleton:Middle_Intermediate_R", "Armature/Skeleton:Middle_Proximal_R", "Armature/Skeleton:Ring_Distal_R", "Armature/Skeleton:Ring_Intermediate_R", "Armature/Skeleton:Ring_Proximal_R", "Armature/Skeleton:Thumb_Distal_R", "Armature/Skeleton:Thumb_Proximal_R"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_t4net"]
animation = &"Grip 5"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_1oy5p"]
filter_enabled = true
filters = ["Armature/Skeleton3D:Index_Distal_R", "Armature/Skeleton3D:Index_Intermediate_R", "Armature/Skeleton3D:Index_Metacarpal_R", "Armature/Skeleton3D:Index_Proximal_R", "Armature/Skeleton:Index_Distal_R", "Armature/Skeleton:Index_Intermediate_R", "Armature/Skeleton:Index_Proximal_R"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_dlhap"]
graph_offset = Vector2(-552.664, 107.301)
nodes/ClosedHand1/node = SubResource("AnimationNodeAnimation_81uet")
nodes/ClosedHand1/position = Vector2(-600, 300)
nodes/ClosedHand2/node = SubResource("AnimationNodeAnimation_gqvs6")
nodes/ClosedHand2/position = Vector2(-360, 300)
nodes/Grip/node = SubResource("AnimationNodeBlend2_8j1dq")
nodes/Grip/position = Vector2(0, 40)
nodes/OpenHand/node = SubResource("AnimationNodeAnimation_t4net")
nodes/OpenHand/position = Vector2(-600, 100)
nodes/Trigger/node = SubResource("AnimationNodeBlend2_1oy5p")
nodes/Trigger/position = Vector2(-360, 40)
node_connections = [&"Grip", 0, &"Trigger", &"Grip", 1, &"ClosedHand2", &"Trigger", 0, &"OpenHand", &"Trigger", 1, &"ClosedHand1", &"output", 0, &"Grip"]

[node name="MerchantScene" instance=ExtResource("1_5j42f")]
script = ExtResource("1_2uvlx")

[node name="WorldEnvironment" parent="Environment" index="0"]
environment = SubResource("Environment_a2d0w")

[node name="SpotLight3D" type="SpotLight3D" parent="Environment" index="2"]
transform = Transform3D(1, 0, 0, 0, 0.303152, 0.952942, 0, -0.952942, 0.303152, 0, 3.72105, 0)
light_energy = 4.022
spot_range = 10.8606
spot_angle = 41.8212

[node name="SpotLight3D2" type="SpotLight3D" parent="Environment" index="3"]
transform = Transform3D(0.948202, -0.183454, 0.259341, 0.0831609, 0.931269, 0.354714, -0.30659, -0.314773, 0.898288, 1.15553, 2.27437, 0.841977)
light_energy = 7.062
light_indirect_energy = 8.33
spot_range = 33.3184
spot_angle = 22.6679

[node name="AnimationTree" parent="XROrigin3D/LeftController/LeftPhysicsHand" index="1"]
tree_root = SubResource("AnimationNodeBlendTree_46ux0")

[node name="MovementDirect" parent="XROrigin3D/LeftController" index="2"]
enabled = false

[node name="FunctionPointer" parent="XROrigin3D/LeftController" index="4"]
enabled = false
show_target = false

[node name="AnimationTree" parent="XROrigin3D/RightController/RightPhysicsHand" index="1"]
tree_root = SubResource("AnimationNodeBlendTree_dlhap")

[node name="FunctionPointer" parent="XROrigin3D/RightController" index="3"]
enabled = false
show_target = false

[node name="MerchDisplayer" parent="." index="2" instance=ExtResource("13_3dylx")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.735)

[node name="MusicChanger" parent="." index="3" instance=ExtResource("4_l6c8x")]
music_state = 1

[connection signal="transaction_finished" from="MerchDisplayer" to="." method="_on_merch_displayer_transaction_finished"]

[editable path="XROrigin3D"]
[editable path="XROrigin3D/LeftController/LeftPhysicsHand"]
[editable path="XROrigin3D/LeftController/LeftPhysicsHand/Hand_Nails_low_L"]
[editable path="XROrigin3D/RightController/RightPhysicsHand"]
[editable path="XROrigin3D/RightController/RightPhysicsHand/Hand_Nails_low_R"]
